<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/background"
        tools:context="com.tnecesoc.digitblock.DailySignInActivity" android:gravity="center">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DailySignInPageGuidance"
            android:textColor="@color/textColor"
            android:textAlignment="center"
            android:textSize="48sp"
            android:layout_gravity="center"/>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/meta_background"
        android:id="@+id/blockToday"
        android:padding="10dp"
        android:layout_margin="100dp">
        <com.tnecesoc.Views.Block
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
    </FrameLayout>


    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:text="@string/SignInButtonGuidance"
            android:textColor="@android:color/white"
            android:id="@+id/signInButton"
            android:layout_margin="10dp"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:layout_margin="10dp"
            android:text="@string/backGuidanceInHiscorePage"
            android:textColor="@android:color/white"
            android:id="@+id/signInPageBack"/>


</LinearLayout>
